--- a/usermanager/pom.xml
+++ b/usermanager/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>usermanager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>usermanager</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for Spring Boot and angular</description>
 	<url/>
 	<licenses>
 		<license/>
