--- a/usermanager/src/main/resources/application.properties
+++ b/usermanager/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=usermanager
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=userDB
+server.servlet.context-path=/api
+server.port=8081
